RESOLVED FIXED267913
AX: Relative frames for RenderTables aren't being cached
https://bugs.webkit.org/show_bug.cgi?id=267913
Summary AX: Relative frames for RenderTables aren't being cached
Joshua Hoffman
Reported 2024-01-22 23:35:40 PST
We don't currently cache frames for RenderTable's.
Attachments
Patch (2.08 KB, patch)
2024-01-23 13:22 PST, Joshua Hoffman
no flags
Radar WebKit Bug Importer
Comment 1 2024-01-22 23:36:03 PST
Joshua Hoffman
Comment 2 2024-01-23 13:22:04 PST
EWS
Comment 3 2024-01-23 23:41:49 PST
Committed 273394@main (ec4f4923b19d): <https://commits.webkit.org/273394@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469514 [details].
Note You need to log in before you can comment on or make changes to this bug.