AX: Relative frames for RenderTables aren't being cached https://bugs.webkit.org/show_bug.cgi?id=267913 rdar://problem/121417745

Reviewed by Tyler Wilcock.

We had not been caching the relative frame of RenderTables on paint since they override RenderBlock::paintObject.

This starts caching those frames on paint.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
* Source/WebCore/rendering/RenderTable.cpp:
(WebCore::RenderTable::paintObject):

Canonical link: https://commits.webkit.org/273394@main